--- a/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
+++ b/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
@@ -8,11 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="EPR.Common.Authorization" Version="1.0.11" />
-    <PackageReference Include="libphonenumber-csharp" Version="8.13.4" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="8.50.0.58025" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="2.13.3" />
+    <PackageReference Include="libphonenumber-csharp" Version="8.13.39" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" />
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.27.0.93347" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.19.1" />
   </ItemGroup>
 
 	<ItemGroup>
