--- a/src/FrontendAccountManagement.Web.UnitTests/FrontendAccountManagement.Web.UnitTests.csproj
+++ b/src/FrontendAccountManagement.Web.UnitTests/FrontendAccountManagement.Web.UnitTests.csproj
@@ -13,24 +13,25 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoFixture" Version="4.18.0" />
-        <PackageReference Include="FluentAssertions" Version="6.8.0" />
+        <PackageReference Include="AutoFixture" Version="4.18.1" />
+        <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="ILogger.Moq" Version="1.1.10" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-        <PackageReference Include="Moq" Version="4.18.4" />
-        <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
-        <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
-        <PackageReference Include="coverlet.collector" Version="3.2.0">
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+        <PackageReference Include="Moq" Version="4.20.70" />
+        <PackageReference Include="MSTest.TestAdapter" Version="3.4.3" />
+        <PackageReference Include="MSTest.TestFramework" Version="3.4.3" />
+        <PackageReference Include="coverlet.collector" Version="6.0.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.msbuild" Version="3.2.0">
+        <PackageReference Include="coverlet.msbuild" Version="6.0.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <ProjectReference Include="..\FrontendAccountManagement.Core\FrontendAccountManagement.Core.csproj" />
         <ProjectReference Include="..\FrontendAccountManagement.Web\FrontendAccountManagement.Web.csproj" />
-        <PackageReference Update="SonarAnalyzer.CSharp" Version="8.55.0.65544" />
+        <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" />
+        <PackageReference Update="SonarAnalyzer.CSharp" Version="9.27.0.93347" />
     </ItemGroup>
 
 </Project>
