--- a/src/FrontendAccountManagement.Web.UnitTests/FrontendAccountManagement.Web.UnitTests.csproj
+++ b/src/FrontendAccountManagement.Web.UnitTests/FrontendAccountManagement.Web.UnitTests.csproj
@@ -28,6 +28,8 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="System.Net.Http" Version="4.3.4" />
+        <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
         <ProjectReference Include="..\FrontendAccountManagement.Core\FrontendAccountManagement.Core.csproj" />
         <ProjectReference Include="..\FrontendAccountManagement.Web\FrontendAccountManagement.Web.csproj" />
         <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" />
