--- a/src/FrontendAccountManagement.IntegrationTests/FrontendAccountManagement.IntegrationTests.csproj
+++ b/src/FrontendAccountManagement.IntegrationTests/FrontendAccountManagement.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -23,7 +23,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" />
-        <PackageReference Update="SonarAnalyzer.CSharp" Version="9.27.0.93347" />
+        <PackageReference Update="SonarAnalyzer.CSharp" Version="9.28.0.94264" />
     </ItemGroup>
 
     <ItemGroup>
