Uncommented the command to build js and css

--- a/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
+++ b/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
@@ -18,7 +18,7 @@
   </Target>
 
   <Target Name="NpmRunBuildFrontend" DependsOnTargets="NpmInstall" BeforeTargets="BeforeBuild">
-    <!--<Exec Command="npm run build-frontend" />-->
+    <Exec Command="npm run build-frontend" />
   </Target>
 
     <ItemGroup>
