--- a/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
+++ b/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPR.Common.Authorization" Version="1.0.11" />
+    <PackageReference Include="EPR.Common.Authorization" Version="1.0.15-rc.612098" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.39" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
