#404748 display_user_orgdetails_on_manageaccount Added UI elements and required changes to model. Temp commit

--- a/src/FrontendAccountManagement.Web/appsettings.development.json
+++ b/src/FrontendAccountManagement.Web/appsettings.development.json
@@ -1,3 +1,47 @@
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Debug",
+//      "System": "Information",
+//      "Microsoft": "Information"
+//    }
+//  },
+//  "FeatureManagement": {
+//    "ManageUserPermissions": true,
+//    "RemoveUsers": true,
+//    "ShowLanguageSwitcher": true
+//  },
+//  "ForwardedHeaders": {
+//    "AllowedHosts": "localhost"
+//  },
+//  "UseLocalSession": false,
+//  "AzureAdB2C": {
+//    "Instance": "https://eprb2cdev.b2clogin.com",
+//    "ClientId": "44e74269-2b90-4f74-aa1d-000d26bd66c4",
+//    "Domain": "eprb2cdev.onmicrosoft.com"
+//  },
+//  "FacadeAPI": {
+//    "Address": "https://localhost:7253/api/",
+//    "UseMockData": false,
+//    "DownstreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation",
+//    "TimeoutSeconds": 10
+//  },
+//  "EprAuthorizationConfig": {
+//    "FacadeBaseUrl": "https://localhost:7253/api/",
+//    "FacadeUserAccountEndpoint": "user-accounts",
+//    "FacadeDownStreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation"
+//  },
+//  "ConnectionStrings": {
+//    "REDIS_CONNECTION": "localhost:6379"
+//  },
+//  "ExternalUrls": {
+//    "LandingPageUrl" : "https://localhost:7084/report-data",
+//    "FrontEndCreationBaseUrl": "https://localhost:7154/create-account/",
+//    "PrivacyLink": "https://localhost:7084/report-data/privacy",
+//    "CookiesLink" : "https://localhost:7054/report-data/cookies"
+//  }
+//}
+
 {
   "Logging": {
     "LogLevel": {
@@ -11,33 +55,50 @@
     "RemoveUsers": true,
     "ShowLanguageSwitcher": true
   },
+
   "ForwardedHeaders": {
     "AllowedHosts": "localhost"
   },
-  "UseLocalSession": false,
+
+  "UseLocalSession": true,
+
   "AzureAdB2C": {
-    "Instance": "https://eprb2cdev.b2clogin.com",
-    "ClientId": "44e74269-2b90-4f74-aa1d-000d26bd66c4",
-    "Domain": "eprb2cdev.onmicrosoft.com"
+    "Instance": "https://AZDCUSPOC2.b2clogin.com",
+    "Domain": "AZDCUSPOC2.onmicrosoft.com",
+    "ClientId": "595f49c3-f886-4869-a1e4-abb0915801ac",
+    "ClientSecret": "dOF8Q~toiH..o~vrGDlFBuIkkqGKn~TSVRnyPbo3",
+    "SignUpSignInPolicyId": "B2C_1A_EPR_SignUpSignIn",
+    "SignedOutCallbackPath": "/signout/B2C_1A_EPR_SignUpSignIn",
+    "ResetPasswordPolicyId": "B2C_1_ResetPassword",
+    "EditProfilePolicyId": "B2C_1_Edit",
+    "CallbackPath": "/signin-oidc"
   },
+
   "FacadeAPI": {
     "Address": "https://localhost:7253/api/",
+  //  "Address": "https://devrwdwebwa6404.azurewebsites.net/api/",
     "UseMockData": false,
-    "DownstreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation",
+    "DownstreamScope": "https://AZDCUSPOC2.onmicrosoft.com/epr-dev-producers-account-facade/account-creation",
     "TimeoutSeconds": 10
   },
+
   "EprAuthorizationConfig": {
     "FacadeBaseUrl": "https://localhost:7253/api/",
+    // "FacadeBaseUrl": "https://devrwdwebwa6404.azurewebsites.net/api/",
+    //"FacadeBaseUrl": "https://devrwdwebwa7404.azurewebsites.net/api/",
     "FacadeUserAccountEndpoint": "user-accounts",
-    "FacadeDownStreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation"
+    "FacadeDownStreamScope": "https://AZDCUSPOC2.onmicrosoft.com/epr-dev-producers-account-facade/account-creation"
   },
+
   "ConnectionStrings": {
     "REDIS_CONNECTION": "localhost:6379"
   },
+
   "ExternalUrls": {
-    "LandingPageUrl" : "https://localhost:7084/report-data",
+    "LandingPageUrl": "https://localhost:7084/report-data",
     "FrontEndCreationBaseUrl": "https://localhost:7154/create-account/",
     "PrivacyLink": "https://localhost:7084/report-data/privacy",
-    "CookiesLink" : "https://localhost:7054/report-data/cookies"
+    "CookiesLink": "https://localhost:7054/report-data/cookies"
   }
+
 }
