--- a/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
+++ b/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
@@ -26,7 +26,7 @@
     </ItemGroup>
   
     <ItemGroup>
-      <PackageReference Include="EPR.Common.Authorization" Version="1.0.11" />
+      <PackageReference Include="EPR.Common.Authorization" Version="1.0.15-rc.613317" />
       <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.21" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.21" />
