revert dev appsettings

--- a/src/FrontendAccountManagement.Web/appsettings.development.json
+++ b/src/FrontendAccountManagement.Web/appsettings.development.json
@@ -17,7 +17,7 @@
   "UseLocalSession": false,
   "AzureAdB2C": {
     "Instance": "https://eprb2cdev.b2clogin.com",
-    "ClientId": "44e74269-2b90-4f74-aa1d-000d26bd66c4",
+    "ClientId": "",
     "Domain": "eprb2cdev.onmicrosoft.com"
   },
   "FacadeAPI": {
