[feature/406133-org-details-have-not-changed: WIP]

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -63,7 +63,8 @@
     "PrivacyInformationCommissioner": "https://ico.org.uk/make-a-complaint",
     "FrontEndCreationBaseUrl": "/create-account",
     "PrivacyLink": "/report-data/privacy",
-    "CookiesLink" : "/report-data/cookies"
+    "CookiesLink": "/report-data/cookies",
+    "CompaniesHouseChangeDetailsUrl": "https://www.gov.uk/file-changes-to-a-company-with-companies-house"
   },
   "EmailAddresses": {
     "DataProtection": "data.protection@defra.gov.uk",
@@ -86,7 +87,7 @@
     "Address": "",
     "DownstreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation",
     "TimeoutSeconds": 10,
-    "GetServiceRolesPath" : "roles",
+    "GetServiceRolesPath": "roles",
     "GetUserAccountPath": "user-accounts"
   },
   "EprAuthorizationConfig": {
