use config for url

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -87,8 +87,10 @@
     "Address": "",
     "DownstreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation",
     "TimeoutSeconds": 10,
-    "GetServiceRolesPath" : "roles",
-    "GetUserAccountPath": "user-accounts"
+    "GetServiceRolesPath": "roles",
+    "GetUserAccountPath": "user-accounts",
+    "GetCompanyFromCompaniesHousePath": "/api/companies-house",
+    ""
   },
   "EprAuthorizationConfig": {
     "FacadeBaseUrl": "",
