--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -89,8 +89,7 @@
     "TimeoutSeconds": 10,
     "GetServiceRolesPath": "roles",
     "GetUserAccountPath": "user-accounts",
-    "GetCompanyFromCompaniesHousePath": "/api/companies-house",
-    ""
+    "GetCompanyFromCompaniesHousePath": "/api/companies-house"
   },
   "EprAuthorizationConfig": {
     "FacadeBaseUrl": "",
