--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -89,7 +89,8 @@
     "TimeoutSeconds": 10,
     "GetServiceRolesPath": "roles",
     "GetUserAccountPath": "user-accounts",
-    "GetCompanyFromCompaniesHousePath": "/api/companies-house"
+    "GetCompanyFromCompaniesHousePath": "/api/companies-house",
+    "PutNationIdByOrganisationIdPath": "organisations/organisation-nation"
   },
   "EprAuthorizationConfig": {
     "FacadeBaseUrl": "",
