Feature/406166 uk nation (#38)
* initiation

* hook up facade endpoint to FE

* wire up to facade layer

* cleanup

* cleanup from extra models

* use resource

* fix view

* cleanup models

* rollback

* add space

* cleanup facade service

* cleanup facade service 2

* add automapper and entities

* wireup to facade service

* refactor

* fix back button

* refactor and add unittest

* use config for url

* add mapper unittest

* fix company house number

* initiation

* use session for companies house data

* refactor

* add unitTests

* fix externalUrl and backbutton text

* add spaceholder for checkCompaniesHouseDetails

* refactor

* fix tests

* refactor the backlink

* rename compnaiesHouseSession property name

---------

Co-authored-by: Ehsan.Hatami <ehsan.hatami@oceantg.com>
Co-authored-by: Ehsan Hatami <ehsan.hatamialamdari.external@eviden.com>

--- a/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
+++ b/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
@@ -46,6 +46,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <EmbeddedResource Update="Resources\Enums\UkNationResource.cy.resx">
+        <SubType>Designer</SubType>
+        <Generator>PublicResXFileCodeGenerator</Generator>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Enums\UkNationResource.resx">
+        <SubType>Designer</SubType>
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>UkNationResource.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
       <EmbeddedResource Update="Resources\Views\AccountManagement\EditUserDetails.resx">
         <Generator>ResXFileCodeGenerator</Generator>
         <LastGenOutput>EditUserDetails.Designer.cs</LastGenOutput>
@@ -145,6 +154,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Compile Update="Resources\Enums\UkNationResource.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>UkNationResource.resx</DependentUpon>
+      </Compile>
       <Compile Update="Resources\Views\AccountManagement\EditUserDetails.Designer.cs">
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
