--- a/src/FrontendAccountManagement.Web/appsettings.development.json
+++ b/src/FrontendAccountManagement.Web/appsettings.development.json
@@ -14,36 +14,30 @@
   "ForwardedHeaders": {
     "AllowedHosts": "localhost"
   },
-  "UseLocalSession": true,
+  "UseLocalSession": false,
   "AzureAdB2C": {
-    "CallbackPath": "/signin-oidc",
-    "Instance": "https://AZDCUSPOC2.b2clogin.com",
-    "ClientId": "595f49c3-f886-4869-a1e4-abb0915801ac",
-    "Domain": "AZDCUSPOC2.onmicrosoft.com",
-    "ClientSecret": "dOF8Q~toiH..o~vrGDlFBuIkkqGKn~TSVRnyPbo3",
-    "SignedOutCallbackPath": "/signout/B2C_1A_EPR_SignUpSignIn",
-    "SignUpSignInPolicyId": "B2C_1A_EPR_SignUpSignIn"
+    "Instance": "https://eprb2cdev.b2clogin.com",
+    "ClientId": "",
+    "Domain": "eprb2cdev.onmicrosoft.com"
   },
   "FacadeAPI": {
-    //"Address": "https://localhost:7253/api/",
-    "Address": "https://devrwdwebwa6404.azurewebsites.net/api/",
+    "Address": "https://localhost:7253/api/",
     "UseMockData": false,
-    "DownstreamScope": "https://AZDCUSPOC2.onmicrosoft.com/epr-dev-producers-account-facade/account-creation",
+    "DownstreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation",
     "TimeoutSeconds": 10
   },
   "EprAuthorizationConfig": {
-    //"FacadeBaseUrl": "https://localhost:7253/api/",
-    "FacadeBaseUrl": "https://devrwdwebwa6404.azurewebsites.net/api/",
+    "FacadeBaseUrl": "https://localhost:7253/api/",
     "FacadeUserAccountEndpoint": "user-accounts",
-    "FacadeDownStreamScope": "https://AZDCUSPOC2.onmicrosoft.com/epr-dev-producers-account-facade/account-creation"
+    "FacadeDownStreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation"
   },
   "ConnectionStrings": {
     "REDIS_CONNECTION": "localhost:6379"
   },
   "ExternalUrls": {
-    "LandingPageUrl" : "https://localhost:7084/report-data",
+    "LandingPageUrl": "https://localhost:7084/report-data",
     "FrontEndCreationBaseUrl": "https://localhost:7154/create-account/",
     "PrivacyLink": "https://localhost:7084/report-data/privacy",
-    "CookiesLink" : "https://localhost:7054/report-data/cookies"
+    "CookiesLink": "https://localhost:7054/report-data/cookies"
   }
 }
