Added method UpdateUserDetails to make api call persons/update-user-details

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -90,7 +90,8 @@
     "GetServiceRolesPath": "roles",
     "GetUserAccountPath": "user-accounts",
     "GetCompanyFromCompaniesHousePath": "/api/companies-house",
-    "PutNationIdByOrganisationIdPath": "organisations/organisation-nation"
+    "PutNationIdByOrganisationIdPath": "organisations/organisation-nation",
+    "PutUserDetailsByUserIdPath": "persons/update-user-details"
   },
   "EprAuthorizationConfig": {
     "FacadeBaseUrl": "",
