Addded Call Api method

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -90,6 +90,8 @@
     "GetServiceRolesPath": "roles",
     "GetUserAccountPath": "user-accounts",
     "GetCompanyFromCompaniesHousePath": "/api/companies-house",
+   
+    "PutUserDetailsByUserIdPath": "persons/update-user-details",
     "PutUpdateOrganisationPath": "organisations/organisation"
   },
   "EprAuthorizationConfig": {
