Addded Call Api method (#56)
* Addded Call Api method

* Addded Call Api method

* Addded Call Api method

* Addded Call Api method

* Rebased current branch

* Added unittest for GetUpdateUserDetails

* Connected the FE to the Facade to update user details

* Some minor changers per PR comments

---------

Co-authored-by: Shehzad Ismail <shehzad.ismail@eviden.com>

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -90,6 +90,7 @@
     "GetServiceRolesPath": "roles",
     "GetUserAccountPath": "user-accounts",
     "GetCompanyFromCompaniesHousePath": "/api/companies-house",
+    "PutUserDetailsByUserIdPath": "persons/update-user-details",
     "PutUpdateOrganisationPath": "organisations/organisation"
   },
   "EprAuthorizationConfig": {
