--- a/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
+++ b/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
@@ -26,7 +26,7 @@
     </ItemGroup>
   
     <ItemGroup>
-      <PackageReference Include="EPR.Common.Authorization" Version="1.0.11" />
+      <PackageReference Include="EPR.Common.Authorization" Version="1.0.15-rc.612098" />
       <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.7" />
       <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="8.0.7" />
