--- a/pipelines/ci_pipeline.yaml
+++ b/pipelines/ci_pipeline.yaml
@@ -42,7 +42,12 @@ resources:
       name: defra/epr-webapps-code-deploy-templates
       type: github
       endpoint: defra
-      ref: main
+      ref: feature/automation-testing-facade
+    
+    - repository: AutomationTesting
+      name: RWD-CPR-EPR4P-ADO/epr-playwright-bdd
+      type: git
+      ref: automation-testing-sam
 
 stages:
 - template: epr-build-pipeline.yaml@CommonTemplates
