--- a/pipelines/ci_pipeline.yaml
+++ b/pipelines/ci_pipeline.yaml
@@ -39,9 +39,8 @@ variables:
 resources:
   repositories:
     - repository: CommonTemplates
-      name: defra/epr-webapps-code-deploy-templates
-      type: github
-      endpoint: defra
+      name: RWD-CPR-EPR4P-ADO/epr-webapps-code-deploy-templates
+      type: git
       ref: feature/automation-testing-facade
     
     - repository: AutomationTesting
