--- a/src/FrontendAccountManagement.Web/Dockerfile
+++ b/src/FrontendAccountManagement.Web/Dockerfile
@@ -5,6 +5,11 @@ ARG PORT=3000
 ENV ASPNETCORE_URLS=http://*:${PORT}
 EXPOSE ${PORT}
 
+# Install tzdata
+USER root
+RUN apk add --no-cache tzdata
+USER dotnet
+
 # Copy everything
 COPY --chown=dotnet FrontendAccountManagement.Web/*.csproj ./FrontendAccountManagement.Web/
 COPY --chown=dotnet FrontendAccountManagement.Core/*.csproj ./FrontendAccountManagement.Core/
