Update to .net 8 (#72)
* Change target framework to .Net 8

Update packages

Switch to using .Net 8 build pipeline

Set docker file to use .Net 8 image

Update readme

Update vunerable transative packages

Update pipelines

Update packages again

Added the release candidate of EPR.Common that is also .net8

* Add .net 8 release candidate of EPR.Common

* Update pipelines

* Update Epr.Common packages

* Update EPR.Common.Authorization

--- a/pipelines/ci_pipeline.yaml
+++ b/pipelines/ci_pipeline.yaml
@@ -35,6 +35,8 @@ variables:
     value: frontend-accountmanagement-microservice
   - name: runNugetTasks
     value: true
+  - name: dotnetVersion
+    value: dotnetVersion8
 
 resources:
   repositories:
@@ -64,5 +66,6 @@ stages:
     runNugetTasks: ${{ variables.runNugetTasks }}
     serviceName: $(serviceName)
     sonarqubeInstance: ${{ parameters.sonarqubeInstance }}
+    dotnetVersion: ${{ variables.dotnetVersion }}
 
 - template: templates/stage-deploy-template.yaml
