--- a/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
+++ b/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPR.Common.Authorization" Version="1.0.11" />
-    <PackageReference Include="libphonenumber-csharp" Version="8.13.4" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="8.50.0.58025" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="2.13.3" />
+    <PackageReference Include="EPR.Common.Authorization" Version="1.0.16" />
+    <PackageReference Include="libphonenumber-csharp" Version="8.13.42" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" />
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.30.0.95878" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="3.0.1" />
   </ItemGroup>
 
 	<ItemGroup>
