Docker file fix and additional test case

--- a/src/FrontendAccountManagement.Web/Dockerfile
+++ b/src/FrontendAccountManagement.Web/Dockerfile
@@ -33,12 +33,17 @@ RUN dotnet publish -c Release -o out
 
 # Build runtime image
 FROM defradigital/dotnetcore:dotnet6.0
-USER dotnet
-COPY --from=build-env /home/dotnet/FrontendAccountManagement.Web/out .
+
+#Temporariky switch to root user to install packages
+USER root
 
 # Add internationalisation support
-USER dotnet
 RUN apk --no-cache add icu-libs icu-data-full libintl
+
+# Switch back to the dotnet user
+USER dotnet
+
+COPY --from=build-env /home/dotnet/FrontendAccountManagement.Web/out .
 
 ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=0
 
