add feature flag for change account  details

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -9,7 +9,8 @@
   "FeatureManagement": {
     "ManageUserPermissions": false,
     "RemoveUsers": false,
-    "ShowLanguageSwitcher": false
+    "ShowLanguageSwitcher": false,
+    "ManageUserDetailChanges": false
   },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
