442337-ga-tags: Updated app settings.

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -37,8 +37,8 @@
   },
   "GoogleAnalytics": {
     "CookiePrefix": "_ga",
-    "MeasurementId": "XCV3BQ1YKX",
-    "TagManagerContainerId": "GTM-M4DPRNL"
+    "MeasurementId": "VMDE8PW9W7",
+    "TagManagerContainerId": "G-VMDE8PW9W7"
   },
   "PhaseBannerOptions": {
     "ApplicationStatus": "Alpha",
