--- a/pipelines/ci_pipeline.yaml
+++ b/pipelines/ci_pipeline.yaml
@@ -42,7 +42,7 @@ resources:
       name: defra/epr-webapps-code-deploy-templates
       type: github
       endpoint: defra
-      ref: main
+      ref: pete-temp-for-4.1
 
 stages:
 - template: epr-build-pipeline.yaml@CommonTemplates
