remove GA TAG id from app settings and use epr settings solution to se the values and deploy. will be testing this in dev 6

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -36,9 +36,9 @@
     "CookiePolicyDurationInMonths": 12
   },
   "GoogleAnalytics": {
-    "CookiePrefix": "_ga",
-    "MeasurementId": "XCV3BQ1YKX",
-    "TagManagerContainerId": "GTM-M4DPRNL"
+    "CookiePrefix": "",
+    "MeasurementId": "",
+    "TagManagerContainerId": ""
   },
   "PhaseBannerOptions": {
     "ApplicationStatus": "Alpha",
