--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "FeatureManagement": {
-    "ManageUserPermissions": false,
+    "ManageUserPermissions": true,
     "RemoveUsers": false,
     "ShowLanguageSwitcher": false,
-    "ManageUserDetailChanges": false
+    "ManageUserDetailChanges": true
   },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
@@ -18,7 +18,7 @@
     "OriginalHostHeaderName": "X-Initial-Host",
     "AllowedHosts": ""
   },
-  "UseLocalSession": false,
+  "UseLocalSession": true,
   "RedisInstanceName": "epr-producers-",
   "SessionIdleTimeOutMinutes": 20,
   "HealthCheckPath": "/admin/health",
