--- a/pipelines/vars-regulator/DEV10-development.yaml
+++ b/pipelines/vars-regulator/DEV10-development.yaml
@@ -3,4 +3,4 @@ variables:
   docker.imageName: 'frontendaccountmanagementregistry'
   acr.azureContainerRegistryName: 'devrwdinfac1401'
   acr.repositoryName: 'frontendaccountmanagementregistry'
-  # serviceName: '' -- Not available
+  serviceName: 'DEVRWDWEBWAA412'
