--- a/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
+++ b/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
@@ -57,6 +57,10 @@
         <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>UkNationResource.Designer.cs</LastGenOutput>
       </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Views\AccountManagement\ApprovedPersonNameChange.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>ApprovedPersonNameChange.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
       <EmbeddedResource Update="Resources\Views\AccountManagement\EditUserDetails.resx">
         <Generator>ResXFileCodeGenerator</Generator>
         <LastGenOutput>EditUserDetails.Designer.cs</LastGenOutput>
@@ -164,6 +168,11 @@
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
         <DependentUpon>UkNationResource.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Views\AccountManagement\ApprovedPersonNameChange.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>ApprovedPersonNameChange.resx</DependentUpon>
       </Compile>
       <Compile Update="Resources\Views\AccountManagement\EditUserDetails.Designer.cs">
         <DesignTime>True</DesignTime>
