--- a/pipelines/ci_pipeline.yaml
+++ b/pipelines/ci_pipeline.yaml
@@ -48,8 +48,7 @@ resources:
     - repository: AutomationTesting
       name: RWD-CPR-EPR4P-ADO/epr-playwright-bdd
       type: git
-      ref: automation-testing-sam
-
+      ref: develop
 stages:
 - template: epr-build-pipeline.yaml@CommonTemplates
   parameters:
