add feature management for ShowApprovedCompanyHouseDetailsChange

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -10,7 +10,8 @@
     "ManageUserPermissions": false,
     "RemoveUsers": false,
     "ShowLanguageSwitcher": false,
-    "ManageUserDetailChanges": false
+    "ManageUserDetailChanges": false,
+    "ShowApprovedCompanyHouseDetailsChange": false
   },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
