feat: #506798 Linked updated and changes to app settings

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -6,12 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-  "FeatureManagement": {
-    "ManageUserPermissions": false,
-    "RemoveUsers": false,
-    "ShowLanguageSwitcher": false,
-    "ManageUserDetailChanges": false
-  },
+    "FeatureManagement": {
+        "ManageUserPermissions": false,
+        "RemoveUsers": false,
+        "ShowLanguageSwitcher": false,
+        "ManageUserDetailChanges": false,
+        "ManageCompanyDetailChanges": true
+    },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
     "ForwardedHostHeaderName": "X-Original-Host",
