corrected logic and save session on back link creation

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -11,7 +11,7 @@
     "RemoveUsers": false,
     "ShowLanguageSwitcher": false,
     "ManageUserDetailChanges": false,
-    "ShowApprovedCompanyHouseDetailsChange": false
+    "ShowApprovedCompanyHouseDetailsChange": true
   },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
