Created new Method and function to ping Server (to reset session timeout)

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -6,13 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-    "FeatureManagement": {
-        "ManageUserPermissions": false,
-        "RemoveUsers": false,
-        "ShowLanguageSwitcher": false,
-        "ManageUserDetailChanges": false,
-        "ManageCompanyDetailChanges": true
-    },
+  "FeatureManagement": {
+    "ManageUserPermissions": false,
+    "RemoveUsers": false,
+    "ShowLanguageSwitcher": false,
+    "ManageUserDetailChanges": false,
+    "ManageCompanyDetailChanges": true,
+    "ShowSessionTimeoutWarning": true
+  },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
     "ForwardedHostHeaderName": "X-Original-Host",
