--- a/pipelines/vars-regulator/DEV15.yaml
+++ b/pipelines/vars-regulator/DEV15.yaml
@@ -1,6 +1,6 @@
 variables:
   azureSubscription: 'AZD-RWD-DEV15'
   docker.imageName: 'frontendaccountmanagementregistry'
-  acr.azureContainerRegistryName: 'devrwdinfac1401'
+  acr.azureContainerRegistryName: 'devrwdinfacf401'
   acr.repositoryName: 'frontendaccountmanagementregistry'
   serviceName: 'DEVRWDWEBWAF412'
