--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -12,7 +12,7 @@
     "ShowLanguageSwitcher": false,
     "ManageUserDetailChanges": false,
     "ManageCompanyDetailChanges": true,
-    "ShowSessionTimeoutWarning": true
+    "ShowSessionTimeoutWarning": false
   },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
