Added the provide your feedback footer

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -6,14 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-  "FeatureManagement": {
-    "ManageUserPermissions": false,
-    "RemoveUsers": false,
-    "ShowLanguageSwitcher": false,
-    "ManageUserDetailChanges": false,
-    "ManageCompanyDetailChanges": true,
-    "ShowSessionTimeoutWarning": true
-  },
+    "FeatureManagement": {
+        "ManageUserPermissions": false,
+        "RemoveUsers": false,
+        "ShowLanguageSwitcher": false,
+        "ManageUserDetailChanges": false,
+        "ManageCompanyDetailChanges": true,
+        "ShowSessionTimeoutWarning": true,
+        "ShowYourFeedbackFooter": true
+    },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
     "ForwardedHostHeaderName": "X-Original-Host",
