set the ShowYourFeedbackFooter to false

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -13,7 +13,7 @@
         "ManageUserDetailChanges": false,
         "ManageCompanyDetailChanges": true,
         "ShowSessionTimeoutWarning": false,
-        "ShowYourFeedbackFooter": true
+        "ShowYourFeedbackFooter": false
     },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
