Updated user data middleware to handle re-ex org

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -93,6 +93,7 @@
     "TimeoutSeconds": 10,
     "GetServiceRolesPath": "roles",
     "GetUserAccountPath": "user-accounts",
+    "GetUserAccountV1Path": "v1/user-accounts",
     "GetCompanyFromCompaniesHousePath": "/api/companies-house",
     "PutUserDetailsByUserIdPath": "user-accounts/personal-details",
     "PutUpdateOrganisationPath": "organisations/organisation"
@@ -100,7 +101,9 @@
   "EprAuthorizationConfig": {
     "FacadeBaseUrl": "",
     "FacadeUserAccountEndpoint": "user-accounts",
+    "FacadeUserAccountV1Endpoint": "v1/user-accounts",
     "FacadeDownStreamScope": "",
+    "ServiceKey": "",
     "SignInRedirect": ""
   }
 }
